tests/mm0_mmu/fail/bad-sort4213.mm0
-- bad modifier order
free strict pure provable sort s4213;